client/styles/main.scss
// Roboto Font
@import url(https://fonts.googleapis.com/css?family=Roboto);

::-webkit-scrollbar {
  display: none;
}

$primary-color: lighten(#64C498, 2);
$color-dark: darken($primary-color, 10);
$color-light: lighten($primary-color, 10);
$secondary-color: lighten($primary-color, 0);
$secondary-light: lighten($secondary-color, 0);
$nav-height: 45px;
$app-view-height: calc(100% - #{$nav-height});

form {
  input {
    display: block;
  }
}

body {
  font-family: 'Roboto', sans-serif;
}

.clickable {
  cursor: pointer;

  &.disabled {
    cursor: no-drop;
  }
}

.button {
  display: flex;
  padding: 5px 15px;
  height: 2em;
  max-width: 300px;
  align-items: center;
  justify-content: center;
  color: white;
  text-transform: uppercase;
  background-color: $primary-color;
  margin: 10px 0px;
  cursor: pointer;
  text-decoration: none;
  -webkit-transition: background-color 0.25s;
          transition: background-color 0.25s;

  &:hover {
    background-color: $color-light;
  }

  &.small {
    width: 60px;
  }
}

.right {
  float: right;
}

.left {
  float: left;
}

.center {
  text-align: center;
}

.warning-buttons {
  display: flex;
  justify-content: center;
  .button {
    margin: 5px;
    width: 200px;
  }
}

// Makes circle buttons
.circle {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border-radius: 100%;
  height: $nav-height;
  width: $nav-height;
  text-decoration: none;
  z-index: 1000;
  cursor: pointer;
}

.hide {
  display: none;
}

.spin {
  -webkit-animation:spin 2s linear infinite;
  -moz-animation:spin 2s linear infinite;
  animation:spin 2s linear infinite;
}

#app-container {
  background-color: #fff;
  position: fixed;
  left: 0;
  top: 0;
  height: $app-view-height;
  width: 100vw;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

#nav-container {
  position: fixed;
  background-color: $primary-color;
  height: $nav-height;
  top: $app-view-height;
  left: 0;
  width: 100vw;

  a {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: calc((100vw - 3px) / 4 );
    height: $nav-height;
    color: #fff;
    text-decoration: none;
    border-right: 1px solid $color-light;
    -webkit-transition: all 0.3s;
            transition: all 0.3s;

    &:last-child {
      border: 0px;
    }

    &.active {
      border-bottom: 7px solid #235C44;
      height: 38px !important;
    }

  }
}

.screen-warning {
  position: absolute;
  display: flex;
  z-index: 2000;
  width: 100vw;
  height: 100%;
  align-items: center;
  justify-content: center;
  background-color: white;
  opacity: 100;
}

.dismissed {
  -webkit-transition: all 0.5s;
          transition: all 0.5s;
  opacity: 0;
  z-index: -1;
}

.share-card {
  display: flex;
  height: 100%;
  width: 100vw;
  justify-content: center;
  align-items: center;
  background-color: rgba(0,0,0,.75);

  a {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    height: $nav-height;
    width: $nav-height;
    color: #fff;
    text-decoration: none;
    margin: 4px;

    &.sms {
      background-color: #6fe490;

      &:hover {
        background-color: lighten(#6fe490, 10);
      }
    }

    &.email {
      background-color: #6699FF;

      &:hover {
        background-color: lighten(#6699FF, 10);
      }
    }

    &.googleplus {
      background-color: #dd4b39;

      &:hover {
        background-color: lighten(#dd4b39, 10);
      }
    }

    &.facebook {
      background-color: #3b5998;

      &:hover {
        background-color: lighten(#3b5998, 10);
      }
    }

    &.twitter {
      background-color: #00aced;

      &:hover {
        background-color: lighten(#00aced, 10);
      }
    }

  }
}

#map, .map-view-container {
  height: 100%;
  width: 100vw;
  background-color: rgb(239, 239, 234);
}

// #map {
//   -webkit-filter: grayscale(100%); /* Chrome, Safari, Opera */
//           filter: grayscale(100%);
// }

.welcome-container {
  display: flex;
  height: 100%;
  width: 100%;
  align-items: center;
  justify-content: center;

  h1, h2, p {
    width: 100%;
    text-align: center;
  }

  h1{
    font-size: 6em;
  }
}

// ******************** MapView Button Stuff *************************** //
.create-button-container, .collapse-button-container, .refresh-button-container,
.center-button-container, .reset-button-container, .share-button-container,
.about-button-container, .filter-search {
  -webkit-transition: all 1s;
          transition: all 1s;

  position: fixed;
  z-index: 900;
  top: calc(#{$nav-height} * 0.5);

  a {
    // this color will obviously be changed
    color: #fff;
    background-color: $secondary-color;
    box-shadow: 0px 0px 5px #888888;
    -webkit-transition: all 0.3s;
            transition: all 0.3s;

    
  }
}

.create-button-container, .share-button-container {
  left: calc(100vw - (#{$nav-height} * 1.5));
}

.collapse-button-container,
.refresh-button-container,
.center-button-container,
.about-button-container {
  left: calc(#{$nav-height} * 0.5);
}

.about-button-container {
  top: 100%;
}

.refresh-button-container,
.center-button-container,
.about-button-container {
  opacity: 0;
  z-index: -1;
}

.refresh-button-container-show {
  z-index: 900;
  opacity: 100;
  top: calc(#{$nav-height} * 1.7);
}

.center-button-container-show {
  z-index: 900;
  opacity: 100;
  top: calc(#{$nav-height} * 2.9);
}

.collapse-button-container {
  z-index: 1000;
  -webkit-transform: rotate(0deg);
          transform: rotate(0deg);
}

.about-button-container-show {
  z-index: 900;
  opacity: 100;
  top: calc(100% - #{$nav-height} * 2.5);
}

.collapse-button-container-show {
  -webkit-transform: rotate(90deg);
          transform: rotate(90deg);
}

.reset-button-container {
  left: calc(100vw - (#{$nav-height} * 1.5));
}

.filter-search {
  top: calc(#{$nav-height} * .45);
  left: calc(100vw / 4);
  opacity: 0;
  z-index: -1;
}

.filter-search-show {
  z-index: 1000;
  opacity: 100;
}
/* ... */

